[package]
name = "sonotube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonos = { path = "../sonos.rs" }
async-std = "1"
tokio = { version = "1.18.2", features = ["full"] }
regex = "1"
duration-string = "0.0.6"
