[package]
name = "sonotube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonos = { git = "https://github.com/mjdavy/sonos.rs.git" }
async-std = "1"
tokio = { version = "1.18.2", features = ["full"] }
regex = "1"
duration-string = { git = "https://github.com/mjdavy/duration-string.git" }
youtube-api = { git = "https://github.com/mjdavy/youtube-rs.git"}
failure = "0.1.8"
