[package]
name = "sonotube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonos = { git = "https://github.com/mjdavy/sonos.rs.git" }
async-std = "1"
tokio = { version = "1.19.2", features = ["full"] }
regex = "1"
duration-string = { git = "https://github.com/mjdavy/duration-string.git" }
failure = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4"
yup-oauth2 = "7"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

